--- a/style.css
+++ b/style.css
@@ -40,10 +40,19 @@ nav {
     padding: 30px 50px;
     transition: all 0.4s ease-out;
 }
+nav img {
+    height: 75px;
+    width: 75px;
+}
+
+nav a {
+    display: flex;
+    align-items: center;
+}
 
 nav.sticky {
     background-color: var(--background-color);
-    filter: drop-shadow(5px 5px 10px #f5e9e3);
+    filter: drop-shadow(5px 5px 10px #f1dbe2);
 }
 
 .brand {
@@ -79,15 +88,16 @@ nav.sticky {
     text-decoration: none;
     font-size: 24px;
     font-weight: 400;
-    border-radius: 32px;
+    border-radius: 25px;
     background-color: var(--background-color);
     padding: 10px;
-    transition: all 0.2s ease-out;
+    
 }
 
 .menu a:hover {
     background-color: var(--accent);
     color: white;
+    transition: all 0.3s ease-out;
 }
 
 .btn {
@@ -220,7 +230,7 @@ nav.sticky {
 
 .adoption-proc h1 {
     font-size: 70px;
-    font-weight: 900;
+    font-weight: 800;
     padding-bottom: 5px;
     margin-right: 100px;
 }
@@ -242,109 +252,13 @@ nav.sticky {
     width: 40px;
     height: 40px;
     border-radius: 100%;
-    border: solid 1px var(--black);
+    border: solid 1px #615f5f;
     align-items: center;
     justify-content: center;
 }
 /* Requirements Page End */
 
 /* Find More Page */
-/* .find-more {
-    margin-left: 20px;
-    margin-right: 50px;
-    min-height: 100vh;
-}
-
-.find-more-content {
-    display: flex;
-    flex-direction: column;
-}
-
-.find-more-img {
-    display: flex;
-    flex-direction: column;
-}
-
-.find-more-img .img-1 {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-right: 42rem;
-    align-items: start;
-}
-
-.img-1 .img-text {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-.img-2 .img-text {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-}
-
-
-.find-more-img .img-2 {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: end;
-}
-
-.find-more-img .img-3 {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-right: 42rem;
-}
-
-.find-more-img .img-2 h2 {
-    font-size: 50px;
-}
-
-.find-more-img .img-2 p {
-    font-size: 30px;
-    text-align: center;
-}
-
-.find-more-text h1 {
-    font-size: 40px;
-    font-weight: 800;
-    margin-bottom: 50px;
-    margin-right: 100px;
-    text-align: center;
-}
-
-.find-more-btn {
-    width: 200px;
-    height: 65px;
-    margin: 5px 5px 0px 0px;
-    background-color: var(--buttons);
-    font-size: 24px;
-    color: white;
-    border-radius: 12px;
-    border: 1px solid var(--buttons);
-    transition: all 0.2s ease-out;
-    line-height: 20px;
-    margin: 15px;
-    align-items: center;
-}
-
-.find-more-btn:hover {
-    background-color: transparent;
-    color: var(--black);
-    border: 1px solid var(--buttons);
-    transform: translateY(-3px);
-    cursor: pointer;
-} */
-
-
-
-
-
-
-
-
 /* Container for the "Find More" section */
 .find-more {
     margin-left: 80px;
@@ -396,13 +310,13 @@ nav.sticky {
 
 /* Text styles */
 .img-content h2 {
-    font-size: 40px;
+    font-size: 35px;
     margin-bottom: 10px;
-    margin-left: 50px;
+    margin-left: 260px;
 }
 
 .img-content p {
-    font-size: 25px;
+    font-size: 23px;
     text-align: center;
 }
 
@@ -428,21 +342,385 @@ nav.sticky {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 680px;
+    margin-left: 60px;
+    margin-left: 650px;
+    border-radius: 50px;
+}
+
+.find-more-btn p {
+    padding: 5px;
 }
 
 /* Button hover effect */
 .find-more-btn:hover {
     background-color: transparent;
-    color: var(--black);
+    color: var(--buttons);
     border: 1px solid var(--buttons);
-    letter-spacing: 1px;
+    font-weight: 600;
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+/* Find More Page End*/
+
+/* About Us Page */
+.about-us {
+    min-height: 70vh;
+    margin-top: 13rem;
+    margin-right: 100px;
+    margin-left: 100px;
+    display: flex;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+.about-text h1 {
+    font-size: 43px;
+    font-weight: 800;
+    padding-bottom: 5px;
+}
+
+.about-text p {
+    font-size: 25px;
+}
+
+.about-img img {
+    height: 25rem;
+    width: 17rem;
+    margin-left: 135px;
+    border-radius: 15px;
+}
+
+.stats {
+    display: flex;
+    padding: 40px;
+}
+
+.star {
+    border-right: 3px solid #d8d7d7;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+
+.star h2 {
+    font-size: 25px;
+    font-weight: 700;
+    ;
+}
+
+.star p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.saved {
+    border-right: 3px solid #d8d7d7;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+
+.saved h2 {
+    font-size: 25px;
+    font-weight: 700;
+    ;
+}
+
+.saved p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.rate {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+
+.rate h2 {
+    font-size: 25px;
+    font-weight: 700;
+    ;
+}
+
+.rate p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.about-text button {
+    width: 200px;
+    height: 45px;
+    margin-top: 25px;
+    margin-left: 35%;
+    border-radius: 7px;
+    background-color: var(--buttons);
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+}
+.about-text button:hover {
+    background-color: transparent;
+    color: var(--buttons);
+    border: 1px solid var(--buttons);
+    font-weight: 600;
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+/* About Us Page End */
+
+/* Testimonials Page */
+.testimonials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 60vh;
+}
+
+.testimonials h2 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    color: var(--accent);
+}
+
+.testimonials h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+.testimony-container {
+    display: flex;
+    margin-top: 34px;
+    gap: 24px;
+}
+
+.testimony-item {
+    display: flex;
+    flex-direction: column;
+    width: 470px;
+    height: 222px;
+    border: 3px solid #b1acac;
+    border-radius: 12px;
+    padding: 24px 30px;
+}
+
+.testimony-people {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.testimony-name {
+    display: flex;
+    gap: 14px;
+}
+
+.testimony-name h4 {
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.testimony-name p {
+    opacity: 0.8;
+}
+
+.testimony-name img {
+    height: 50px;
+    width: 50px;
+}
+
+.testimony-text {
+    font-weight: 600;
+    margin-top: 28px;
+}
+/* Testimonials Page End */
+
+/* Form Page */
+.req-page {
+    min-height: 30vh;
+    background: linear-gradient(135deg, #dee8f3, #e2bbc9);
+}
+
+.form-container {
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+}
+
+.form-container p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.form h2 {
+    margin: 10px;
+    text-align: center;
+} 
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    margin-left: 48%;
+    margin-bottom: 40px;
+    align-items: center;
+}
+
+.form button {
+    width: 200px;
+    height: 45px;
+    margin-left: 35%;
+    border-radius: 7px;
+    background-color: var(--buttons);
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+}
+
+.form button:hover {
+    background-color: transparent;
+    color: var(--buttons);
+    border: 1px solid var(--buttons);
     font-weight: 600;
     transform: translateY(-3px);
     cursor: pointer;
 }
 
-/* Find More Page End*/
+.form input[type="text"],
+[type="email"],textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    gap: 10px;
+    margin-left: 17%;
+    margin-bottom: 15px;
+    width: 400px;
+    
+}
+
+.form-img  {
+    height: 20px;
+    width: 15px;
+    margin-top: 40px;
+    margin-left: 18%;
+}
+
+/* Form Page End */
+
+/* Footer */
+footer {
+    background-color: var(--black);
+    height: 44vh;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+
+.foot-divs {
+    display: flex;
+    padding-top: 20px;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 32px 50px;
+}
+
+.links hr {
+    width: 100px;
+}
+
+.links h2 {
+    font-size: 22px;
+    font-weight: 800;
+}
+
+.a-links {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.a-links a {
+    text-decoration: none;
+    color: var(--background-color);
+    font-size: 20px;
+    margin-right: 300px;
+}
+
+.a-links a:hover {
+    transform: translateY(-3px);
+    padding: 0.7px;
+    transition: all 0.4s ease-in-out;
+    color: var(--accent);
+}
+
+.socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 32px;
+    margin-right: 300px;
+}
+
+.socials h1 {
+    font-size: 40px;
+}
+
+.socials p {
+    font-size: 20px;
+}
+
+.socials .media i {
+    font-size: 25px;
+    margin: 5px;
+}
+
+.contact {
+   margin-right: 10px;
+   margin-top: 35px;
+}
+
+.contact p, i {
+    font-size: 20px;
+    padding-top: 9px;
+}
+
+.copyright {
+    font-size: 18px;
+}
+
+.copyright a {
+    text-decoration: none;
+    color: var(--accent);
+}
+/* Footer End */
+
+/* Responsiveness */
+/* Laptop & Tablets */
+
 
 
 
